--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "qa_wolf_take_home",
+  "name": "Irene Permatasari",
   "version": "1.0.0",
-  "description": "Welcome to the QA Wolf take home assignment for our [QA Engineer](https://www.task-wolf.com/apply-qae) role! We appreciate your interest and look forward to seeing what you come up with.",
+  "description": "QA 24Slide Take Home test",
   "main": "index.js",
   "scripts": {},
   "keywords": [],
